--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <span class="cart-image" data-cart> CART </span>
+        <div class="cart-div" data-cart>
+            <div class="cart-quantity hidden" data-cart-quantity></div>
+            <img src="images/icons8-shopping-cart-64.png" alt="">
+        </div>
         <h1>Our Menu</h1>
         <div class="underline"></div>
         <section class="categories">
