checkout styling complete

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="increase" data-increase> &#62; </button>
         </div>
             <!--TODO: make the button selector work | remove position fixed from div-->
-            <button class="cleitin" data-order-confirm> Order </button>
+            <button class="order-confirm-btn" data-order-confirm> Order </button>
     </div>
 
     <div class="overlay hidden" data-overlay></div>
