--- a/order-complete.html
+++ b/order-complete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <title>Checkout</title>
     <link rel="stylesheet" href="styles/checkmark.css">
     <link rel="stylesheet" href="styles/checkout.css">
 </head>
@@ -16,6 +16,6 @@
         </svg>
         </div>
         <p class="order-sent"> Order sent! </p>
-        <footer class="footer"> While you wait, why don't you check this <a href="https://fabiano-pancheniak.github.io/todoApp.github.io/">To-Do List</a>?</footer>
+        <footer class="footer"> While you wait, why don't you check this <a href="https://fabiano-pancheniak.github.io/todoApp.github.io/" target="_blank">To-Do List</a>?</footer>
 </body>
 </html>
